feat: add shortuts

--- a/coloring.html
+++ b/coloring.html
@@ -1,9 +1,20 @@
-<p>
-	Обычно окраска верхней стороны крыльев самок тёмно-бурая с желтоватыми или оранжевыми пятнышками в их краевой части. Отличия самцов от самок заключаются в том, что желтоватые пятна у них сокращаются или исчезают (хвостатка падубовая, большинство червонцев, зефир берёзовый). Крылья становятся или одноцветно бурыми, или на них более-менее ярко проступает синий (Lycaena) или огненно-красный фон (Cupido). Голубая или огненная окраска у самок выражена слабее, чем у самцов тех же видов, тёмных элементов рисунка сохраняется больше, в частности сильнее выражен рисунок, соответствующий глазкам нижней стороны. Снизу окраска крыльев буроватая или сероватая.
-</p>
-<p>
-	Для многих видов Lycaena и Cupido характерен глазчатый рисунок на нижней стороне крыльев. Такой рисунок мы можем наблюдать у голубянки икар. Он состоит из двойного ряда чёрных пятнышек вдоль края, разделённых оранжевой каёмкой, обыкновенно распадающейся на отдельные оранжевые луночки; из ряда глазков в светлых ободках, проходящих поперёк передних и задних крыльев на половине расстояния между краем и концом средней ячейки; из точек и чёрточек на поперечных жилках каждого крыла и из нескольких глазков на прикорневой части крыльев. У некоторых видов этот рисунок проявляется и на верхней стороне крыльев. Наиболее постоянным элементом являются краевые пятна и наиболее полно этот рисунок выражен у самок.
-</p>
-<p>
-	У голубянок родов Thecla, Callophrys рисунок нижней стороны крыльев состоит только из поперечных полосок и пятна в виде глазков обособляются только у края задних крыльев, и то не у всех видов. Между этими типами рисунков мы можем наблюдать — правда только на юге — и связующие звенья в лице голубянка римн и голубянки гороховой. При внимательном рассмотрении рисунков крыльев голубянки гороховой и наших обычных голубянок можно заметить, что глазчатый рисунок может быть сведён к поперечно-полосатому, распадающемуся на отдельные пятнышки (при исчезновении одних элементов и небольшой перегруппировке других). У Celastrina argiolus чёрные пятнышки узкие и вытянуты в поперечном направлении, этим указывая на своё происхождение от разорвавшейся на мелкие чёрточки поперечной линии.
-</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel = "shortcut icon" href = "./assets/butterfly.png">
+		<title>
+			Голубянки | Окрас
+		</title>
+	</head>
+	<body>
+		<p>
+			Обычно окраска верхней стороны крыльев самок тёмно-бурая с желтоватыми или оранжевыми пятнышками в их краевой части. Отличия самцов от самок заключаются в том, что желтоватые пятна у них сокращаются или исчезают (хвостатка падубовая, большинство червонцев, зефир берёзовый). Крылья становятся или одноцветно бурыми, или на них более-менее ярко проступает синий (Lycaena) или огненно-красный фон (Cupido). Голубая или огненная окраска у самок выражена слабее, чем у самцов тех же видов, тёмных элементов рисунка сохраняется больше, в частности сильнее выражен рисунок, соответствующий глазкам нижней стороны. Снизу окраска крыльев буроватая или сероватая.
+		</p>
+		<p>
+			Для многих видов Lycaena и Cupido характерен глазчатый рисунок на нижней стороне крыльев. Такой рисунок мы можем наблюдать у голубянки икар. Он состоит из двойного ряда чёрных пятнышек вдоль края, разделённых оранжевой каёмкой, обыкновенно распадающейся на отдельные оранжевые луночки; из ряда глазков в светлых ободках, проходящих поперёк передних и задних крыльев на половине расстояния между краем и концом средней ячейки; из точек и чёрточек на поперечных жилках каждого крыла и из нескольких глазков на прикорневой части крыльев. У некоторых видов этот рисунок проявляется и на верхней стороне крыльев. Наиболее постоянным элементом являются краевые пятна и наиболее полно этот рисунок выражен у самок.
+		</p>
+		<p>
+			У голубянок родов Thecla, Callophrys рисунок нижней стороны крыльев состоит только из поперечных полосок и пятна в виде глазков обособляются только у края задних крыльев, и то не у всех видов. Между этими типами рисунков мы можем наблюдать — правда только на юге — и связующие звенья в лице голубянка римн и голубянки гороховой. При внимательном рассмотрении рисунков крыльев голубянки гороховой и наших обычных голубянок можно заметить, что глазчатый рисунок может быть сведён к поперечно-полосатому, распадающемуся на отдельные пятнышки (при исчезновении одних элементов и небольшой перегруппировке других). У Celastrina argiolus чёрные пятнышки узкие и вытянуты в поперечном направлении, этим указывая на своё происхождение от разорвавшейся на мелкие чёрточки поперечной линии.
+		</p>
+	</body>
+</html>
