--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,14 @@
-<img src = "./assets/Butterfly_Luc_Viatour.jpg" width = "480" height = "360">
-<img src = "./assets/Great_Purple_Hairstreak_(Atlides_halesus),_ventral.jpg" width = "480" height = "360">
-<img src = "./assets/Celastrina_ladon_03722.jpg" width = "480" height = "360">
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel = "shortcut icon" href = "./assets/butterfly.png">
+        <title>
+            Голубянки | Галерея
+        </title>
+    </head>
+    <body>
+        <img src = "./assets/Butterfly_Luc_Viatour.jpg" width = "480" height = "360">
+        <img src = "./assets/Great_Purple_Hairstreak_(Atlides_halesus),_ventral.jpg" width = "480" height = "360">
+        <img src = "./assets/Celastrina_ladon_03722.jpg" width = "480" height = "360">
+    </body>
+</html>
